[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Lvl1.gd" type="Script" id=2]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TogglerArea.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button5" type="Button" parent="."]
margin_left = 600.446
margin_top = 423.853
margin_right = 818.446
margin_bottom = 475.853
text = "Play"

[node name="Time" type="Label" parent="."]
margin_left = 510.064
margin_top = 479.945
margin_right = 609.064
margin_bottom = 497.945
rect_scale = Vector2( 4, 4 )
text = "TIME"
align = 1
valign = 1

[node name="Beat" type="Label" parent="."]
margin_left = 25.6482
margin_top = 417.418
margin_right = 57.6482
margin_bottom = 435.418
rect_scale = Vector2( 4, 4 )
text = "BEAT"
valign = 1

[node name="Bar" type="Label" parent="."]
margin_left = 31.6482
margin_top = 491.418
margin_right = 57.6482
margin_bottom = 509.418
rect_scale = Vector2( 4, 4 )
text = "BAR"
valign = 1

[node name="Level" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Player" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 505.25, 317.643 )
thrust = 300
turn_spd = 5.0

[node name="RigidBody2D" type="RigidBody2D" parent="Level"]
editor/display_folded = true
mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="Level/RigidBody2D"]

[node name="icon" type="ColorRect" parent="Level/RigidBody2D/Node2D"]
margin_left = -16.0
margin_right = 1023.0
margin_bottom = 52.0
color = Color( 0.0784314, 0.517647, 0, 1 )

[node name="icon2" type="ColorRect" parent="Level/RigidBody2D/Node2D"]
margin_left = -13.4153
margin_top = 568.637
margin_right = 1025.58
margin_bottom = 620.637
color = Color( 0.0784314, 0.517647, 0, 1 )

[node name="icon3" type="ColorRect" parent="Level/RigidBody2D/Node2D"]
margin_left = -32.0
margin_top = 620.0
margin_right = 580.0
margin_bottom = 672.0
rect_rotation = -90.7961
color = Color( 0.0784314, 0.517647, 0, 1 )

[node name="icon4" type="ColorRect" parent="Level/RigidBody2D/Node2D"]
margin_left = 1005.0
margin_top = 617.0
margin_right = 1617.0
margin_bottom = 669.0
rect_rotation = -90.141
color = Color( 0.0784314, 0.517647, 0, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/RigidBody2D"]
polygon = PoolVector2Array( 1016.66, 0.370804, 5.68719, 1.80278, -1.84203, 50.9474, 1002.86, 49.2909, 1007.63, 571.263, 19.2106, 571.263, 16.0001, 43.0001, -13.9999, 57.0001, -8.63254, 606.095, 1036.71, 598.935 )

[node name="Slider" type="Node2D" parent="."]
position = Vector2( 0, -324.654 )

[node name="slideval" type="Label" parent="Slider"]
margin_left = 477.0
margin_top = 382.0
margin_right = 503.0
margin_bottom = 400.0
rect_scale = Vector2( 4, 4 )
text = "BAR"
valign = 1

[node name="vols" type="Control" parent="Slider"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="vol1" type="Label" parent="Slider/vols"]
margin_left = 30.0
margin_top = 533.0
margin_right = 66.0
margin_bottom = 551.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol2" type="Label" parent="Slider/vols"]
margin_left = 144.0
margin_top = 533.0
margin_right = 180.0
margin_bottom = 551.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol3" type="Label" parent="Slider/vols"]
margin_left = 284.0
margin_top = 532.0
margin_right = 320.0
margin_bottom = 550.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol4" type="Label" parent="Slider/vols"]
margin_left = 411.0
margin_top = 532.0
margin_right = 447.0
margin_bottom = 550.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol5" type="Label" parent="Slider/vols"]
margin_left = 551.0
margin_top = 535.0
margin_right = 587.0
margin_bottom = 553.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol6" type="Label" parent="Slider/vols"]
margin_left = 681.0
margin_top = 534.0
margin_right = 717.0
margin_bottom = 552.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol7" type="Label" parent="Slider/vols"]
margin_left = 799.0
margin_top = 533.0
margin_right = 835.0
margin_bottom = 551.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="vol8" type="Label" parent="Slider/vols"]
margin_left = 925.0
margin_top = 534.0
margin_right = 961.0
margin_bottom = 552.0
rect_scale = Vector2( 2, 2 )
text = "1: 0.0"
valign = 1

[node name="HSlider" type="HSlider" parent="Slider"]
editor/display_folded = true
margin_left = 139.0
margin_top = 470.0
margin_right = 678.0
margin_bottom = 486.0
rect_scale = Vector2( 1.4, 2 )
max_value = 7.0
tick_count = 8
ticks_on_borders = true

[node name="0" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 9.3959, 6.96405 )

[node name="1" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 82.3524, 6.96404 )

[node name="2" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 156.967, 8.12469 )

[node name="3" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 230.476, 7.73782 )

[node name="4" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 305.644, 7.73779 )

[node name="5" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 380.811, 8.5116 )

[node name="6" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 456.531, 6.57715 )

[node name="7" parent="Slider/HSlider" instance=ExtResource( 4 )]
position = Vector2( 529.487, 6.57715 )

[connection signal="pressed" from="Button5" to="." method="_play_pressed"]
